--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,11 @@
+%% -*- erlang -*-
 {erl_first_files, ["src/equery.erl", "src/q.erl", "src/qast.erl"]}.
+
+{erl_opts, [warn_unused_vars]}.
+
+{plugins                , [{coveralls, {git, "https://github.com/markusn/coveralls-erl", {branch, "master"}}}]}.
+{cover_enabled          , true}.
+{cover_export_enabled   , true}.
+{coveralls_coverdata    , "_build/test/cover/ct.coverdata"}.
+{coveralls_service_name , "travis-ci"}.
 {xref_checks, [undefined_function_calls]}.
