--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,6 @@
 {plugins                , [{coveralls, {git, "https://github.com/markusn/coveralls-erl", {branch, "master"}}}]}.
 {cover_enabled          , true}.
 {cover_export_enabled   , true}.
-{coveralls_coverdata    , "_build/test/cover/ct.coverdata"}.
+{coveralls_coverdata    , "_build/test/cover/eunit.coverdata"}.
 {coveralls_service_name , "travis-ci"}.
 {xref_checks, [undefined_function_calls]}.
