Move postgresql functions to pg module

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %% -*- erlang -*-
-{erl_first_files, ["src/equery.erl", "src/q.erl", "src/qast.erl"]}.
+{erl_first_files, ["src/equery.erl", "src/pg.erl", "src/qast.erl"]}.
 
 {erl_opts, [warn_unused_vars]}.
 
