--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 
 {erl_opts, [warn_unused_vars]}.
 
-{plugins                , [{coveralls, {git, "https://github.com/markusn/coveralls-erl", {branch, "master"}}}]}.
+{plugins                , [{coveralls, {git, "https://github.com/markusn/coveralls-erl", {ref, "4bf49af"}}}]}.
 {cover_enabled          , true}.
 {cover_export_enabled   , true}.
 {coveralls_coverdata    , "_build/test/cover/eunit.coverdata"}.
