--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,9 @@
 
 {erl_opts, [warn_unused_vars]}.
 
+{plugins                , [coveralls]}. % use hex package
 {cover_enabled          , true}.
 {cover_export_enabled   , true}.
 {coveralls_coverdata    , "_build/test/cover/eunit.coverdata"}.
-{coveralls_service_name , "travis-ci"}.
+{coveralls_service_name , "github"}.
 {xref_checks, [undefined_function_calls]}.
